samples/_failures_safe/1761709580_693394_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ef00d82.c: In function ‘print_help’:
./samples/SAFE/__tmp_5ef00d82.c:178:12: error: missing terminating " character
  178 |     printf("Available commands: start, data
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ef00d82.c:178:5: error: expected expression at end of input
  178 |     printf("Available commands: start, data
      |     ^~~~~~
./samples/SAFE/__tmp_5ef00d82.c:178:5: error: expected declaration or statement at end of input
